Fixed footer alignment bottom

--- a/css/styles.css
+++ b/css/styles.css
@@ -180,10 +180,11 @@ footer {
   flex-direction: column;
   background-color: rgba(6, 39, 47, 1);
   background-position: bottom;
+  position: relative;
   bottom: 0px;
   width: 100%;
   height: 80px;
-  margin-top: 100px;
+  margin-top: auto;
   margin-bottom: 0px;
   border-top-style: outset;
   border-top-color: rgba(186, 227, 240, 1);
@@ -306,6 +307,7 @@ footer {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  margin-bottom: 100px;
 }
 
 .card {
